# ugoki-iOS-Android-app

./: .gitignore  CLAUDE.md  DESIGN_SYSTEM_PLAN.md  DOCUMENTATION_AUDIT_REPORT.md  README.md  UGOKI_COMPLETE_AUDIT_2026-01-24.md  UGOKI_Color_Palette_Proposal.docx  USER_TEST_REPORT_2026-01-24.md
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2a037d15a76b_add_recipe_tables.py  376c6f80292d_initial_schema.py  381d1817ac05_add_audience_tags_to_research_papers.py  506cdfe5c0bc_add_exercise_metadata.py  5f73e0ba06be_add_research_tables.py  7a8b9c0d1e2f_add_revoked_tokens_table.py  aa09363f0ae9_add_biomarker_metadata_and_bloodwork_.py  b63ec5f08081_add_notification_tables.py  b7c8d9e0f1a2_add_abstract_bullets_to_research_papers.py  be981e1dd668_add_content_tables.py  c1d2e3f4a5b6_add_coach_conversations.py  c8f1e2d3a4b5_add_activity_events_table.py  d2e3f4a5b6c7_add_coach_documents.py  d9e2f3a4b5c6_add_social_tables.py  e3f4a5b6c7d8_add_coach_user_settings.py  ed45e0e5d74c_add_metrics_table.py  ef0543dddbb1_add_progression_tables.py  f14424e7a998_add_profile_tables.py  f4a5b6c7d8e9_add_user_memory_table.py  g5b6c7d8e9f0_add_evaluation_table.py
apps/api/scripts/: fix_workout_sessions.py  ingest_documents.py  seed_recipes.py  seed_users.py  seed_workouts.py  test_api.py
apps/api/src/: main.py
apps/api/src/core/: auth.py  config.py  rate_limit.py
apps/api/src/db/: __init__.py  (+2 more)
apps/api/tests/: conftest.py  test_ai_coach_safety.py  test_health.py  test_security.py
(+413 files in other folders)
